# portfolio-research

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
doc/: port_results.md
doc/wsq_project/: barbell_robustness_notes.md  core_signal_formulas.md  distance_pairs_buildout_sleeves.md  implementation_notes.md  script_summary_2026-05-17.md  signal_family_comparisons_2026-05-18.md  sleeve_attribution_analysis.md  strategy_log.md  (+1 more)
notebooks/: DailyMonitorDashboard.ipynb  Example Backtest.ipynb  GEX Charts.ipynb  GEX Experiments.ipynb  IV_RV_Comparison.ipynb  IronCondor EV Calculations.ipynb  Macro Indicators.ipynb  SP500 Cross Sectional Mean Reversion.ipynb  SP500 Cross Sectional Momentum.ipynb  SP500 Cross Sectional Residual Mean Reversion.ipynb  SP500 Five Strategy Portfolio v10.ipynb  SP500 Multi-Strategy.ipynb  SP500 Sector Correlation.ipynb  SP500 XSect Mean Reversion with Cointegration.ipynb  SPX Short-Term IV-RV Spread.ipynb  SPX-1DTE-Forecasting-Regime.ipynb  SPX-1DTE-Sharpe-Drawdown.ipynb  SPX_1DTE_Baseline_Analysis_v0.ipynb  SPX_1DTE_Baseline_Analysis_v1.ipynb  Sector XSection Momentum.ipynb  Troubleshoot Custom Position Builder.ipynb  Troubleshoot Study Pipeline.ipynb  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  Untitled4.ipynb  Untitled5.ipynb  Untitled6.ipynb  Untitled7.ipynb  Untitled8.ipynb  Untitled9.ipynb  What does IV represent?.ipynb  multi-sleeve-us-equities-stat-arb-qstudy.ipynb  multi-sleeve-us-equities-stat-arb.ipynb  qstudy_example.ipynb
scripts/: portfolio_sweep_conditioned_portfolio_combos.py
(+347 files in other folders)
